v1.11.x/connectors/database/redshift/yaml.mdx
---
title: Run the Redshift Connector Externally
description: Ingest metadata from Redshift using YAML and configure access, profiling, and lineage extraction.
sidebarTitle: Run Externally
mode: "wide"
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import { CodePreview, ContentPanel, ContentSection, CodePanel } from '/snippets/components/CodePreview.jsx'
import AutoClassification from '/snippets/connectors/yaml/auto-classification.mdx'
import DataProfiler from '/snippets/v1.11.x/connectors/yaml/data-profiler.mdx'
import Lineage from '/snippets/connectors/yaml/lineage.mdx'
import QueryUsage from '/snippets/connectors/yaml/query-usage.mdx'
import IngestionSinkDef from '/snippets/connectors/yaml/ingestion-sink-def.mdx'
import WorkflowConfigDef from '/snippets/connectors/yaml/workflow-config-def.mdx'
import IngestionCli from '/snippets/connectors/yaml/ingestion-cli.mdx'
import PythonRequirements from '/snippets/connectors/python-requirements.mdx'
import ExternalIngestionDeployment from '/snippets/v1.11.x/connectors/external-ingestion-deployment.mdx'
import IngestionSink from '/snippets/connectors/yaml/ingestion-sink.mdx'
import WorkflowConfig from '/snippets/connectors/yaml/workflow-config.mdx'
import SourceConfigDef from '/snippets/connectors/yaml/database/source-config-def.mdx'
import SourceConfig from '/snippets/connectors/yaml/database/source-config.mdx'
import DataQuality from '/snippets/connectors/yaml/data-quality.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/redshift.webp'
name="Redshift"
stage="PROD"
availableFeatures={["Metadata", "Query Usage", "Data Profiler", "Data Quality", "dbt", "Lineage", "Column-level Lineage", "Stored Procedures", "Sample Data", "Auto-Classification"]}
unavailableFeatures={["Owners", "Tags"]} />
In this section, we provide guides and references to use the Redshift connector.

<Info>
**Supported Authentication Types:**
- **Basic Auth** — Username and password authentication
- **IAM Auth** — AWS IAM-based authentication with automatic temporary credential retrieval (supports both Provisioned Clusters and Serverless Workgroups)
</Info>

Configure and schedule Redshift metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
    - [Incremental Extraction](/v1.11.x/connectors/ingestion/workflows/metadata/incremental-extraction/redshift)
- [Query Usage](#query-usage)
- [Lineage](#lineage)
- [Data Profiler](#data-profiler)
- [Data Quality](#data-quality)
- [dbt Integration](#dbt-integration)
- [Enable Security](#securing-redshift-connection-with-ssl-in-openmetadata)
<ExternalIngestionDeployment />
## Requirements
Redshift user must grant `SELECT` privilege on table [SVV_TABLE_INFO](https://docs.aws.amazon.com/redshift/latest/dg/r_SVV_TABLE_INFO.html) to fetch the metadata of tables and views. For more information visit [here](https://docs.aws.amazon.com/redshift/latest/dg/c_visibility-of-data.html).
```sql
CREATE USER test_user with PASSWORD 'password';
GRANT SELECT ON TABLE svv_table_info to test_user;
```
<Note>
The Redshift connector supports both Amazon Redshift Provisioned (cluster) and Amazon Redshift Serverless starting from release 1.11.5. The connector automatically detects the deployment type during ingestion and uses the appropriate system views for query and lineage extraction. No additional configuration changes are required.
</Note>

### Profiler & Data Quality
Executing the profiler workflow or data quality tests, will require the user to have `SELECT` permission on the tables/schemas where the profiler/tests will be executed. For system-level profiling metrics on Provisioned Clusters, the user also needs:
```sql
GRANT SELECT ON TABLE pg_catalog.stl_insert TO <ingestion_user>;
GRANT SELECT ON TABLE pg_catalog.stl_delete TO <ingestion_user>;
```

### Usage & Lineage
For the usage and lineage workflow, the user will need `SELECT` privilege on the following system tables:

**For Provisioned Clusters:**
```sql
GRANT SELECT ON TABLE pg_catalog.stl_query TO <ingestion_user>;
GRANT SELECT ON TABLE pg_catalog.stl_querytext TO <ingestion_user>;
GRANT SELECT ON TABLE pg_catalog.stl_scan TO <ingestion_user>;
```

**For Serverless Workgroups:**
```sql
GRANT SELECT ON TABLE pg_catalog.sys_query_history TO <ingestion_user>;
GRANT SELECT ON TABLE pg_catalog.sys_query_text TO <ingestion_user>;
GRANT SELECT ON TABLE pg_catalog.sys_query_detail TO <ingestion_user>;
```

### Stored Procedures
For stored procedure lineage extraction, the user needs `SELECT` privilege on:

**For Provisioned Clusters:**
```sql
GRANT SELECT ON TABLE pg_catalog.svl_stored_proc_call TO <ingestion_user>;
```

**For Serverless Workgroups:**
```sql
GRANT SELECT ON TABLE pg_catalog.sys_procedure_call TO <ingestion_user>;
```

### IAM Authentication Requirements
To use IAM authentication instead of basic username/password, ensure the IAM role or user has the following permissions:

**For Provisioned Clusters:**
```json
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Action": "redshift:GetClusterCredentials",
      "Resource": [
        "arn:aws:redshift:<region>:<account-id>:dbuser:<cluster-id>/<db-user>",
        "arn:aws:redshift:<region>:<account-id>:dbname:<cluster-id>/<db-name>"
      ]
    }
  ]
}
```

**For Serverless Workgroups:**
```json
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Action": "redshift-serverless:GetCredentials",
      "Resource": "arn:aws:redshift-serverless:<region>:<account-id>:workgroup/<workgroup-id>"
    }
  ]
}
```
<Note>
The connector automatically detects whether your Redshift endpoint is Provisioned or Serverless based on the hostname pattern and uses the appropriate API for credential retrieval.
</Note>

### Python Requirements
<PythonRequirements />
To run the Redshift ingestion, you will need to install:
```bash
pip3 install "openmetadata-ingestion[redshift]"
```
## Metadata Ingestion
All connectors are defined as JSON Schemas.
[Here](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/entity/services/connections/database/redshiftConnection.json)
you can find the structure to create a connection to Redshift.
In order to create and run a Metadata Ingestion workflow, we will follow
the steps to create a YAML configuration able to connect to the source,
process the Entities if needed, and reach the OpenMetadata server.
The workflow is modeled around the following
[JSON Schema](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/metadataIngestion/workflow.json)
**Note:** During the metadata ingestion for redshift, the tables in which the distribution style i.e `DISTSTYLE` is not `AUTO` will be marked as partitioned tables
It is recommended to exclude the schema "information_schema" from the metadata ingestion as it contains system tables and views.
### 1. Define the YAML Config

This is a sample config for Redshift:

<CodePreview>

<ContentPanel>

<ContentSection id={1} title="Source Configuration" lines="1-3">

Configure the source type and service name for your Redshift connector.

</ContentSection>

<ContentSection id={2} title="Username" lines="7">

**username**: Specify the User to connect to Redshift. It should have enough privileges to read all the metadata.

</ContentSection>

<ContentSection id={3} title="Auth Type" lines="8-12">

**authType**: Choose the authentication method:

- **Basic Auth** (`password`): Use username and password for authentication.
- **IAM Auth** (`awsConfig`): Use AWS IAM for authentication. The connector will retrieve temporary credentials using `GetClusterCredentials` (Provisioned) or `GetCredentials` (Serverless) APIs.

</ContentSection>

<ContentSection id={4} title="Database" lines="9">

**database**: The database of the data source is an optional parameter, if you would like to restrict the metadata reading to a single database. If left blank, OpenMetadata ingestion attempts to scan all the databases.

</ContentSection>

<ContentSection id={5} title="Host Port" lines="10">

**hostPort**: Host and port of the Redshift service.

</ContentSection>

<ContentSection id={6} title="Ingest All Databases" lines="11">

**ingestAllDatabases**: Ingest data from all databases in Redshift. You can use databaseFilterPattern on top of this.

</ContentSection>

<ContentSection id={7} title="SSL Configuration" lines="13">

#### Advanced Configuration

The sslConfig and sslMode are used to configure the SSL (Secure Sockets Layer) connection between your application and the Redshift server. Redshift will require only rootCertificate i.e caCertificate.

**caCertificate**: This is the path to the CA (Certificate Authority) certificate file. This file is used to verify the server's certificate.

**sslMode**: This field controls whether a secure SSL/TLS connection will be negotiated with the server. There are several modes you can choose:

- disable: No SSL/TLS encryption will be used; the data sent over the network is not encrypted.
- allow: The driver will try to negotiate a non-SSL connection but if the server insists on SSL, it will switch to SSL.
- prefer (the default): The driver will try to negotiate an SSL connection but if the server does not support SSL, it will switch to a non-SSL connection.
- require: The driver will try to negotiate an SSL connection. If the server does not support SSL, the driver will not fall back to a non-SSL connection.
- verify-ca: The driver will negotiate an SSL connection and verify that the server certificate is issued by a trusted certificate authority (CA).
- verify-full: The driver will negotiate an SSL connection, verify that the server certificate is issued by a trusted CA and check that the server host name matches the one in the certificate.

</ContentSection>

<ContentSection id={8} title="Connection Options" lines="14">

**Connection Options (Optional)**: Enter the details for any additional connection options that can be sent to database during the connection. These details must be added as Key-Value pairs.

</ContentSection>

<ContentSection id={9} title="Connection Arguments" lines="15">

**Connection Arguments (Optional)**: Enter the details for any additional connection arguments such as security or protocol configs that can be sent to database during the connection. These details must be added as Key-Value pairs.

- In case you are using Single-Sign-On (SSO) for authentication, add the `authenticator` details in the Connection Arguments as a Key-Value pair as follows: `"authenticator" : "sso_login_url"`

</ContentSection>

<ContentSection id={10} title="Source Config" lines="19-62">

<SourceConfigDef />

</ContentSection>

<ContentSection id={11} title="Sink Configuration" lines="63-65">

<IngestionSinkDef />

</ContentSection>

<ContentSection id={12} title="Workflow Configuration" lines="66-82">

<WorkflowConfigDef />

</ContentSection>

</ContentPanel>

<CodePanel fileName="redshift_config.yaml">

```yaml
source:
  type: redshift
  serviceName: aws_redshift
  serviceConnection:
    config:
      type: Redshift
      username: username  # REQUIRED
      # Option 1: Basic Auth (username/password)
      authType:
        password: password
      # Option 2: IAM Auth (uncomment below and comment out password above)
      # authType:
      #   awsConfig:
      #     awsRegion: us-east-1  # REQUIRED for IAM auth
      #     # Optional: Explicit credentials (if not using default credential chain)
      #     # awsAccessKeyId: your-access-key
      #     # awsSecretAccessKey: your-secret-key
      #     # awsSessionToken: session-token  # For temporary credentials
      #     # assumeRoleArn: arn:aws:iam::123456789012:role/role-name  # For cross-account
      #     # assumeRoleSessionName: session-name
      database: dev  # REQUIRED - database name
      hostPort: cluster.name.region.redshift.amazonaws.com:5439  # REQUIRED - format: host:port
      # ingestAllDatabases: true
      # sslConfig:
      #   caCertificate: "path/to/ca/certificate"
      # sslMode: disable #allow prefer require verify-ca verify-full
      # connectionOptions:
      #   key: value
      # connectionArguments:
      #   key: value
```

<SourceConfig />

<IngestionSink />

<WorkflowConfig />

</CodePanel>

</CodePreview>

<IngestionCli />
<QueryUsage connector="redshift" />
<Lineage connector="redshift" />
<DataProfiler connector="redshift" />
<AutoClassification connector="redshift" />
<DataQuality />
## Securing Redshift Connection with SSL in OpenMetadata
To configure SSL for secure connections between OpenMetadata and a Redshift database, Redshift offers various SSL modes, each providing different levels of connection security.
When running the ingestion process externally, specify the SSL mode to be used for the Redshift connection, such as `prefer`, `verify-ca`, `allow`, and others. Once you've chosen the SSL mode, provide the CA certificate for SSL validation (`caCertificate`). Only the CA certificate is required for SSL validation in Redshift.
```yaml
      sslMode: disable #allow prefer require verify-ca verify-full
      sslConfig:
            caCertificate: "/path/to/ca/certificate"
```
## dbt Integration
You can learn more about how to ingest dbt models' definitions and their lineage [here](/v1.11.x/connectors/database/dbt).
